# my-c2l

./: .gitignore  README.md  TODOS.md  autoRun.py  clear_tpu_locks.sh  contrastiveLearning.py  contrastiveLearning.sh  env.json  evaluate.sh  evaluateModel.ipynb  evaluateModel.py  generateTriplets.ipynb  generateTriplets.py  generateTriplets.sh  main.py  mask_candidate_sample.json  mask_candidate_sample_original_augmented_1x_aclImdb.json  mask_candidate_sample_original_augmented_1x_aclImdb1.json  preTraining.py  preTrainingv2.py  pretrain.sh  process-data.ipynb  pyproject.toml  pyproject.toml.old  requirements.txt  run.py  run.sh  splitAugmentedSet.py  splitDatasets.py  splitDatasets.sh  splitIMDBDatasets.py  splitJSONIMDBDatasets.py  splitYelpDatasets.py  split_datasets.py  test.py  token_idx_flip  token_idx_flip_02_07_2023  token_idx_flip_original_augmented_1x_aclImdb.json  torchPlayground.ipynb  train_model.py
dataset_splitting/: splitFakeNewsDatasets.py  splitJSONIMDBDatasets.py  splitYelpDatasets.py
datasets/yelp_chi/: dataset_meta.pt  yelp_chi_test.csv
datasets/yelp_nyc/: dataset_meta.pt
datasets/yelp_zip/: dataset_meta.pt  yelp_zip_test.csv
samples/yelp_chi/: mask_candidate_sample.json  token_idx_flip.json
samples/yelp_nyc/: mask_candidate_sample.json  token_idx_flip.json
samples/yelp_zip/: mask_candidate_sample.json  token_idx_flip.json
src/: datasetClasses.py  pickleUtils.py  preTraining.py  proecssing.py  testing.py
src/arg_classes/: __init__.py
src/benchmarking/: benchmarking.py  processDataTests.py  testData.py
src/classes/: datasets.py  (+2 more)
(+43 files in other folders)
