[tool.poetry]
name = "my-c2l"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"


[tool.poetry.dependencies]
python = "^3.11"
torch = "^1.13.1"
transformers = "^4.25.1"
pandas = "^1.5.3"
numpy = "^1.24.1"
blosc = "^1.11.1"
pybind11 = "^2.10.3"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "benchmarking/misc/pybind_build.py"
  