[tool.poetry]
name = "my-c2l"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"




[tool.poetry.dependencies]
python = "^3.10"
transformers = "^4.26.0"
pandas = "^1.5.3"
blosc = "^1.11.1"
pybind11 = "^2.10.3"
scikit-learn = "^1.2.1"
jupyter = "^1.0.0"
ipywidgets = "^8.0.4"
torchmetrics = "^0.11.1"
matplotlib = "^3.7.0"
wandb = "^0.13.11"


[tool.poetry.group.dev.dependencies]
viztracer = "^0.15.6"
py-spy = "^0.3.14"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
script = "benchmarking/misc/pybind_build.py"
  